persistent-volume.yaml
apiVersion: v1
kind: Pod
metadata:
 name: fileserver-pod
spec:
 containers:
 - name: bash
   image: gcr.io/google-containers/alpine-with-bash:1.0
   command: ["/bin/bash"]
   args: ["-c", "while true; do sleep 10; done"]
   volumeMounts:
   - mountPath: /mnt/filestore
     name: fileserver-volumen
 volumes:
 - name: fileserver-volumen
   persistentVolumeClaim:
     claimName: pvc-fileserver-jenkins
     readOnly: false
